--- a/webdev/style.css
+++ b/webdev/style.css
@@ -4,14 +4,19 @@ html {
 }
 
 .container {
+    width: 1600px;
+    /*
     width: 100vw;
     max-width: 1600px;
-    margin: 0 auto; 
+    */
+    margin: 0 auto;
+    overflow:hidden; 
 }
 
 .wrapper {
-    max-width: 1280px;
-    height: 100%;
+    /*max-width: 1280px;
+    height: 100%;*/
+    width: 1280px;
     margin: 0 auto;
 }
 
@@ -20,8 +25,10 @@ html {
     height: 95px;
     background-color: #000;
     position: fixed;
-    width: 100vw;
-    max-width: 1600px;
+    top: 0;
+    /*width: 100vw;
+    max-width: 1600px;*/
+    width: 1600px;
     margin: 0 auto;
     
 }
@@ -71,8 +78,9 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100vw;
-    height: 100vh;
+    /*width: 100vw;
+    height: 100vh;*/
+    
     overflow: hidden;
 }
 
@@ -149,9 +157,14 @@ html {
     font-size: 14px;
     line-height: 140%;
     color: #4E4E4E;
+    margin-bottom: 30px;
 }
 
-.rappresent h2 {
+.bold {
+    font-weight: 700;
+}
+
+h2 {
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -165,11 +178,9 @@ html {
     margin-bottom: 20px;
 }
 
-.rappresent p {
-    margin-bottom: 30px;
-}
 
-.rappresent {
+.rappresent,
+.implement {
     display: flex;
 }
 
@@ -183,4 +194,100 @@ html {
     /* calc(100% - 43% - 248px)*/
     margin-top: 120px;
     margin-bottom: 140px;
+}
+
+.community-container {
+    background-color: #F5F6F7;
+}
+
+.community {
+    display: flex;   
+}
+
+.community-content {
+    min-width: 298px;
+    margin: 155px 139px 174px 109px;
+}
+
+.slider {
+    margin-top: 82px;
+    margin-bottom: 140px;
+    
+    
+}
+
+.slider-images {
+    display: flex;
+    margin-right: 30px; 
+     
+}
+
+.slider-images img {
+    margin-right: 30px; 
+}
+
+.slider-items {
+    max-width: 83px;
+    margin-left: 548px;
+    margin-bottom: 20px;
+    font-family: Roboto;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 18px;
+    color: #373737;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.arrow:hover {
+    cursor: pointer;
+    opacity: .5;
+}
+
+.slider-items p {
+    margin-left: 14px;
+    margin-right: 14px;
+    cursor: default;
+}
+
+.community-content img {
+    display: block;
+    margin: 0 auto 20px auto;
+}
+
+.community-content h3 {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 2.4px;
+    text-transform: uppercase;
+    color: #373737;
+    margin-bottom: 10px;
+}
+
+.community-content p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #4E4E4E;
+}
+
+.implement-content {
+    flex-basis: 407px;
+    margin-top: 319px;
+    margin-bottom: 339px;
+}
+
+.implement-img {
+    flex-basis: 407px;
+    /* calc(100% - 43% - 248px)*/
+    margin: 120px 139px 140px 109px;
 }
