--- a/webdev/style.css
+++ b/webdev/style.css
@@ -365,3 +365,42 @@ h2 {
 #android-btn {
     width: 127px;
 }
+
+footer {
+    background-color: #000000;
+    overflow: hidden;
+    height: 185px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60px;
+}
+
+.low-nav {
+    width: 236px;
+}
+
+.low-nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.low-nav ul li a {
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-weight: 400px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.production {
+    color: #818181;
+    width: 236px;
+}
