--- a/webdev/style.css
+++ b/webdev/style.css
@@ -1,3 +1,5 @@
+/* Common styles */
+
 html {
     font-family: 'Roboto', sans-serif; 
     font-size: 14px;
@@ -5,21 +7,101 @@ html {
 
 .container {
     width: 1600px;
-    /*
-    width: 100vw;
-    max-width: 1600px;
-    */
     margin: 0 auto;
     overflow:hidden; 
 }
 
 .wrapper {
-    /*max-width: 1280px;
-    height: 100%;*/
     width: 1280px;
     margin: 0 auto;
 }
 
+.button {
+    width: 184px;
+    height: 46px;
+    background: #00AFDB;
+    border: none;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+}
+
+.button:hover {
+    background: #009CC2;
+}
+
+.content-par {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #4E4E4E;
+    margin-bottom: 30px;
+}
+
+.center-par {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #4E4E4E;
+}
+
+.bold {
+    font-weight: 500;
+}
+
+h3 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #373737;
+    margin-bottom: 20px;
+}
+
+/* Block's backgrounds */
+
+.your-life-container {
+    background-image: url(assets/images/bg-image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+
+.community-container,
+.download-container {
+    background-color: #F5F6F7;
+    overflow: hidden;
+}
+
+.subscribe-container {
+    background-image: url(assets/images/image-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+
+footer {
+    background-color: #000000;
+    overflow: hidden;
+    height: 185px;
+}
+
+/* Header styles */
 
 .header {
     height: 95px;
@@ -75,23 +157,14 @@ h1 {
     border-bottom: none;
 }
 
-
-.your-life-container {
-    background-image: url(assets/images/bg-image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    /*width: 100vw;
-    height: 100vh;*/
-    overflow: hidden;
-}
+/* "Your life" block styles */
 
 .your-life-content {
     margin-top: 135px;
     margin-bottom: 183px;
 }
 
-.your-life h2 {
+h2 {
     font-family: Roboto;
     font-weight: 700;
     font-size: 64px;
@@ -100,8 +173,7 @@ h1 {
     letter-spacing: 4.5px;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin: o auto;
-    
+    margin: o auto;  
 }
 
 .your-life p {
@@ -113,29 +185,7 @@ h1 {
     color: #FFFFFF;
     max-width: 490px;
     width: 100%;
-    margin: 20px auto 30px auto;
-
-   
-    
-}
-
-.button {
-    width: 184px;
-    height: 46px;
-    background: #00AFDB;
-    border: none;
-    font-family: Roboto;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-
-}
-
-.button:hover {
-    background: #009CC2;
+    margin: 20px auto 30px auto;    
 }
 
 .your-life-btn {
@@ -160,41 +210,15 @@ h1 {
     opacity: 0.8;
 }
 
-.content-par {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-    color: #4E4E4E;
-    margin-bottom: 30px;
-}
+/* "Rappresent" block styles */
 
-.bold {
-    font-weight: 500;
-}
-
-h3 {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #373737;
-    margin-bottom: 20px;
-}
-
-
-.rappresent,
-.implement {
+.rappresent {
     display: flex;
 }
 
 .rappresent-content {
     width: 407px;
-    margin: 295px 248px 312px 109px;
+    margin: 295px 248px 314px 109px;
 }
 
 .rappresent-content h3 {
@@ -203,16 +227,11 @@ h3 {
 
 .rappresent-img {
     width: 407px;
-    /* calc(100% - 43% - 248px)*/
     margin-top: 120px;
     margin-bottom: 138px;
 }
 
-.community-container,
-.download-container {
-    background-color: #F5F6F7;
-    overflow: hidden;
-}
+/* "Community" block styles */
 
 .community {
     display: flex;   
@@ -220,20 +239,17 @@ h3 {
 
 .community-content {
     min-width: 298px;
-    margin: 155px 139px 174px 109px;
+    margin: 155px 139px 170px 109px;
 }
 
 .slider {
     margin-top: 82px;
-    margin-bottom: 140px;
-    
-    
+    margin-bottom: 136px;  
 }
 
 .slider-images {
     display: flex;
-    margin-right: 30px; 
-     
+    margin-right: 30px;   
 }
 
 .slider-images img {
@@ -254,7 +270,6 @@ h3 {
     justify-content: center;
     align-items: center;
 }
-
 
 .arrow:hover {
     cursor: pointer;
@@ -284,14 +299,10 @@ h3 {
     margin-bottom: 10px;
 }
 
-.center-par {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: center;
-    color: #4E4E4E;
+/* "Implement" block styles */
+
+.implement {
+    display: flex;
 }
 
 .implement-content {
@@ -301,27 +312,18 @@ h3 {
 }
 
 .implement-img {
-    width: 410px;
-    /* calc(100% - 43% - 248px)*/
+    width: 407px;
     margin: 120px 139px 140px 109px;
 }
 
-#implement-btn {
-    width: 180px;
-}
-
-.subscribe-container {
-    background-image: url(assets/images/image-bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-}
+#implement-btn { width: 180px; }
 
 .subscribe-content {
     width: 407px;
     margin: 200px auto 220px auto;
 }
+
+/* "Subscribe" block styles */
 
 .subscribe-content h3 {
     color: #FFFFFF;
@@ -347,6 +349,8 @@ h3 {
 #subscribe-btn {
     width: 66px;
 }
+
+/* "Download" block styles */
 
 .download-content {
     width: 480px;
@@ -386,11 +390,7 @@ h3 {
     width: 127px;
 }
 
-footer {
-    background-color: #000000;
-    overflow: hidden;
-    height: 185px;
-}
+/* "Footer" block styles */
 
 .footer {
     display: flex;
